--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.nagpal.shivam.vtudslab.MainActivity">
+        <activity android:name="com.nagpal.shivam.vtudslab.Activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.nagpal.shivam.vtudslab.DisplayActivity"></activity>
+        <activity android:name="com.nagpal.shivam.vtudslab.Activity.DisplayActivity"></activity>
     </application>
 
 </manifest>
