--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nagpal.shivam.vtudslab">
+    package="com.nagpal.shivam.vtucslab">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,14 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.nagpal.shivam.vtudslab.Activity.MainActivity">
+        <activity android:name="com.nagpal.shivam.vtucslab.Activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.nagpal.shivam.vtudslab.Activity.DisplayActivity"></activity>
+        <activity android:name="com.nagpal.shivam.vtucslab.Activity.DisplayActivity"></activity>
     </application>
 
 </manifest>
