--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".Activity.ProgramActivity"></activity>
         <activity
             android:name=".Activity.RepositoryActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -31,9 +32,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!--<activity android:name=".Activity.OLDActivity" />-->
-        <!--<activity android:name=".Activity.RepoDisplayActivity" />-->
+        </activity> <!-- <activity android:name=".Activity.OLDActivity" /> -->
+        <!-- <activity android:name=".Activity.RepoDisplayActivity" /> -->
         <activity android:name=".Activity.DisplayActivity" />
     </application>
 
