--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Activity.ProgramActivity"></activity>
+
         <activity
             android:name=".Activity.RepositoryActivity"
+            android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,17 +25,34 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--<activity-->
-            <!--android:name=".Activity.MainActivity"-->
-            <!--android:theme="@style/AppTheme.NoActionBar">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+        <activity
+            android:name=".Activity.ProgramActivity"
+            android:launchMode="singleTask"
+            android:parentActivityName=".Activity.RepositoryActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Activity.RepositoryActivity" />
+        </activity>
+
+        <activity
+            android:name=".Activity.DisplayActivity"
+            android:parentActivityName=".Activity.ProgramActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Activity.ProgramActivity" />
+        </activity>
+        <!--<activity-->
+        <!--android:name=".Activity.MainActivity"-->
+        <!--android:theme="@style/AppTheme.NoActionBar">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.MAIN" />-->
+
+        <!--<category android:name="android.intent.category.LAUNCHER" />-->
+        <!--</intent-filter>-->
         <!--</activity> &lt;!&ndash; <activity android:name=".Activity.OLDActivity" /> &ndash;&gt;-->
         <!-- <activity android:name=".Activity.RepoDisplayActivity" /> -->
-        <activity android:name=".Activity.DisplayActivity" />
+
     </application>
 
 </manifest>
