--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,18 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
+
+//    GSON
     implementation 'com.google.code.gson:gson:2.8.5'
+
+//    Firebase SDK
+    implementation ('com.google.firebase:firebase-core:16.0.9') {
+        exclude module: 'support-v4'
+    }
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
