--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 28
@@ -33,9 +34,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
 
 //    Firebase SDK
-    implementation ('com.google.firebase:firebase-core:16.0.9') {
+    implementation('com.google.firebase:firebase-core:16.0.9') {
         exclude module: 'support-v4'
     }
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
