--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation('com.google.firebase:firebase-core:16.0.9') {
         exclude module: 'support-v4'
     }
+    implementation('com.google.firebase:firebase-messaging:18.0.0') {
+        exclude module: 'support-v4'
+    }
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.0'
 
     testImplementation 'junit:junit:4.12'
