--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion '30.0.2'
     defaultConfig {
         applicationId "com.nagpal.shivam.vtucslab"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 7
         versionName "6.1"
@@ -20,7 +20,8 @@ android {
         }
     }
     buildFeatures {
-        dataBinding true
+        dataBinding true // TODO: Remove once the migration is done
+        viewBinding true
     }
 }
 
@@ -45,6 +46,12 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    def nav_version = "2.3.0"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
