--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="google_analytics_adid_collection_enabled"
@@ -29,7 +36,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.ProgramActivity"
             android:launchMode="singleTask"
@@ -38,7 +44,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.RepositoryActivity" />
         </activity>
-
         <activity
             android:name=".activities.DisplayActivity"
             android:parentActivityName=".activities.ProgramActivity">
@@ -46,7 +51,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.ProgramActivity" />
         </activity>
-
     </application>
 
 </manifest>
