--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,26 +23,30 @@ android {
         dataBinding true // TODO: Remove once the migration is done
         viewBinding true
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'com.google.android.material:material:1.2.1'
 
 //    Firebase SDK
-    implementation('com.google.firebase:firebase-core:17.5.0') {
+    implementation('com.google.firebase:firebase-core:17.5.1') {
         exclude module: 'support-v4'
     }
-    implementation('com.google.firebase:firebase-messaging:20.2.4') {
+    implementation('com.google.firebase:firebase-messaging:20.3.0') {
         exclude module: 'support-v4'
     }
-    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     def nav_version = "2.3.0"
