--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:value="false" />
 
         <activity
-            android:name=".Activity.RepositoryActivity"
+            android:name=".activities.RepositoryActivity"
             android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar"
             android:exported="true">
@@ -32,20 +32,20 @@
         </activity>
 
         <activity
-            android:name=".Activity.ProgramActivity"
+            android:name=".activities.ProgramActivity"
             android:launchMode="singleTask"
-            android:parentActivityName=".Activity.RepositoryActivity">
+            android:parentActivityName=".activities.RepositoryActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Activity.RepositoryActivity" />
+                android:value=".activities.RepositoryActivity" />
         </activity>
 
         <activity
-            android:name=".Activity.DisplayActivity"
-            android:parentActivityName=".Activity.ProgramActivity">
+            android:name=".activities.DisplayActivity"
+            android:parentActivityName=".activities.ProgramActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Activity.ProgramActivity" />
+                android:value=".activities.ProgramActivity" />
         </activity>
 
     </application>
