--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="androidx.multidex.MultiDexApplication"
+        android:name=".VTUCSLabApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,8 +17,8 @@
         <!-- TODO: Change the label for MainActivity to app_name-->
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/app_name_new"
             android:exported="true"
+            android:label="@string/app_name_new"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
