feature: Create Details Activity and Pass the safeArgs on navigation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".activities.DetailsActivity"
+            android:exported="false" />
+
         <meta-data
             android:name="google_analytics_adid_collection_enabled"
             android:value="false" />
