--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+        def navigationVersion = "2.5.3"
         classpath 'com.android.tools.build:gradle:7.4.2'
         classpath 'com.google.gms:google-services:4.3.15'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.4'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
