feature: Implement Program click handler, create ContentActivity and wireframe safeArgs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.DetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.ContentActivity"
             android:exported="false" />
 
         <meta-data
