--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
 
-    // GSON
-    implementation 'com.google.code.gson:gson:2.8.9'
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.module/jackson-module-kotlin
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.14.2'
 
     // Firebase SDK
     implementation 'com.google.firebase:firebase-messaging-ktx'
@@ -53,7 +53,7 @@ dependencies {
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-jackson:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
 
     testImplementation 'junit:junit:4.13.2'
