--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    kotlin {
+        jvmToolchain(11)
+    }
+
+    android {
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_11
+            targetCompatibility JavaVersion.VERSION_11
+        }
+
+        kotlinOptions {
+            jvmTarget = 11
+        }
+    }
     buildFeatures {
         viewBinding true
     }
