--- a/versions.gradle
+++ b/versions.gradle
@@ -15,5 +15,6 @@ versions.multidex = "2.0.1"
 versions.navigation = "2.5.3"
 versions.retrofit = "2.9.0"
 versions.room = "2.5.1"
+versions.swipe_refresh_layout = "1.1.0"
 versions.test_runner = "1.5.2"
 ext.versions = versions
