--- a/versions.gradle
+++ b/versions.gradle
@@ -6,7 +6,7 @@ versions.espresso_core = "3.5.1"
 versions.firebase_bom = "31.2.3"
 versions.firebase_crashlytics_gradle = "2.9.4"
 versions.google_services = "4.3.15"
-versions.gradle = "8.0.0"
+versions.gradle = '8.0.2'
 versions.jackson_module_kotlin = "2.14.2"
 versions.junit = "4.13.2"
 versions.kotlin_gradle_plugin = "1.8.0"
