chore: Update versions (#29)
* chore: Update the Dependencies versions

* chore: Update the Gradle version

* chore: Update the Android Application version

* chore: Include the DB schemas export annotation and add the exported schema to the version tracking

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,16 @@ android {
         applicationId "com.nagpal.shivam.vtucslab"
         minSdkVersion 19
         targetSdkVersion 33
-        versionCode 8
-        versionName "6.2"
+        versionCode 9
+        versionName "7.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
     buildTypes {
         release {
