--- a/versions.gradle
+++ b/versions.gradle
@@ -3,6 +3,7 @@ versions.appcompat = "1.6.1"
 versions.constraintlayout = "2.1.4"
 versions.core_ktx = "1.10.1"
 versions.espresso_core = "3.5.1"
+versions.ext_junit = "1.1.5"
 versions.firebase_bom = "31.2.3"
 versions.firebase_crashlytics_gradle = "2.9.4"
 versions.google_services = "4.3.15"
@@ -16,5 +17,7 @@ versions.navigation = "2.6.0"
 versions.retrofit = "2.9.0"
 versions.room = "2.5.2"
 versions.swipe_refresh_layout = "1.1.0"
+versions.test_core = "1.5.0"
 versions.test_runner = "1.5.2"
+versions.test_rules = "1.5.0"
 ext.versions = versions
